--- a/cms_index.html
+++ b/cms_index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- TOPBAR -->
     <header class="topbar">
-      <div class="brand">WQT — Quản trị</div>
+      <div class="brand">Web Quản Trị</div>
       <div class="spacer"></div>
       <button class="btn" onclick="openLogin()">Đăng nhập</button>
       <button class="btn danger" onclick="logoutAll()">Đăng xuất</button>
@@ -19,7 +19,6 @@
     <div class="app">
       <aside class="sidebar">
         <div class="sidebar-head">
-          <div class="avatar">W</div>
           <div class="meta">
             <div class="name">Web Quản Trị</div>
           </div>
