--- a/cms_styles.html
+++ b/cms_styles.html
@@ -65,16 +65,15 @@
 
   .login-blocker{
     position:fixed;
-    inset:56px 0 0 0;
-    background:rgba(15,23,42,0.65);
+    inset:0;
+    background:#ffffff;
     display:flex;
     align-items:center;
     justify-content:center;
     z-index:120;
     padding:24px;
   }
-  body.needs-login .app{ pointer-events:none; }
-  body.needs-login #login_blocker{ pointer-events:auto; }
+  body.needs-login .app > :not(#login_blocker){ pointer-events:none; }
   .login-blocker.hidden{ display:none !important; }
   .login-blocker-card{
     max-width:360px;
