Fix login dialog to show credentials form

--- a/cms_login.html
+++ b/cms_login.html
@@ -1,4 +1,4 @@
-<dialog id="dlg_login" class="modal">
+<div id="dlg_login" class="modal modal-overlay">
   <div class="box">
     <div class="head">
       <div class="title">Đăng nhập tài khoản nội bộ</div>
@@ -17,8 +17,8 @@
       </div>
     </div>
     <div class="foot">
-      <button class="btn" type="button" onclick="document.getElementById('dlg_login').close()">Đóng</button>
+      <button class="btn" type="button" onclick="closeLoginDialog()">Đóng</button>
       <button class="btn primary" type="button" id="btn_login_do">Đăng nhập</button>
     </div>
   </div>
-</dialog>
+</div>
