--- a/cms_styles.html
+++ b/cms_styles.html
@@ -199,6 +199,15 @@
   .kpi-value{
     margin-top:8px;
     font-size:22px; font-weight:800;
+    word-break:break-word;
+    overflow-wrap:anywhere;
+  }
+  .kpi-value.single-line{
+    display:block;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+    font-size:20px;
   }
   .kpi-note{ margin-top:6px; font-size:12px; color:var(--muted); }
 
